--- a/desidelight/src/index.css
+++ b/desidelight/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -24,19 +24,19 @@ code {
 }
 
 :root {
-  --color-bg: #1f1f38;
+  --color-bg: #f5f5f5;
   --color-bg-variant: #28284f;
   --color-primary: #007bff;
-  /* Blue */
+  /* Blue 
   --color-primary-variant: #0056b3;
-  /* Darker Blue */
+  /* Darker Blue *
   --color-accent: #ff4500;
-  /* Orange-Red */
+  /* Orange-Red 
   --color-accent-variant: #cc3700;
-  /* Darker Orange-Red */
+  /* Darker Orange-Red *
   --color-white: #fff;
   --color-light: #f8f8f8;
-  /* Light Gray */
+  /* Light Gray *
 
   --transition: all 400ms ease;
 
@@ -56,7 +56,7 @@ body {
   line-height: 1.7;
 }
 
-/* ============ GENERAL STYLES ============ */
+/* ============ GENERAL STYLES ============ 
 
 .container {
   width: var(--container-width-lg);
@@ -82,16 +82,16 @@ section {
 section > h2,
 section > h5 {
   text-align: center;
-  color: var(--color-light);
+  color: greenyellow;
 }
 
 section > h2 {
-  color: var(--color-primary);
+  color: greenyellow;
   margin-bottom: 3rem;
 }
 
 .text-light {
-  color: var(--color-light);
+  color: greenyellow;
 }
 
 .btn {
@@ -123,7 +123,7 @@ section > h2 {
   color: var(--color-white);
 }
 
-/* Additional styles for hover/focus effects */
+/* Additional styles for hover/focus effects *
 .btn:hover,
 .btn:focus {
   opacity: 0.8;
@@ -152,7 +152,7 @@ img {
   object-fit: cover;
 }
 
-/* ============ MEDIA QUERIES (MEDIUM DEVICES) ============ */
+/* ============ MEDIA QUERIES (MEDIUM DEVICES) ============ 
 
 @media screen and (max-width: 1024px) {
   .container {
@@ -164,7 +164,7 @@ img {
   }
 }
 
-/* ============ MEDIA QUERIES (SMALL DEVICES) ============ */
+/* ============ MEDIA QUERIES (SMALL DEVICES) ============ 
 
 @media screen and (max-width: 600px) {
   .container {
@@ -176,13 +176,15 @@ img {
   }
 }
 
-/* ============ HOME PAGE ============ */
+/* ============ HOME PAGE ============ 
 
 .main__title {
   font-size: 3rem;
-  color: var(--color-primary);
+  color: greenyellow;
   text-align: center;
   margin-top: 4rem;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 
   @media screen and (min-width: 1200px) {
     font-size: 5rem;
@@ -206,16 +208,17 @@ img {
     margin-top: 15rem;
   }
 }
-
+/* 
 /* ============ NAV ============ */
 
 /* Base styles for the navigation bar */
+/* 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--color-bg);
-  padding: 1rem;
+  /* background-color: green; 
+  padding: 0.5rem;
 }
 
 .logo {
@@ -249,9 +252,9 @@ img {
 .nav-childs:focus {
   background-color: var(--color-primary);
   color: var(--color-white);
-}
+} */
 
-/* ============ Auth pages (Login, Register, Reset) ============ */
+/* ============ Auth pages (Login, Register, Reset) ============ 
 
 .auth__form {
   background-color: var(--color-bg-variant);
@@ -304,7 +307,7 @@ img {
 
 .auth__container .main__title svg {
   margin-left: 10px;
-  /* Add some space between the icon and the text */
+  /* Add some space between the icon and the text *
 }
 
 .btn-activate-account {
@@ -315,9 +318,9 @@ img {
   padding: 2rem;
 }
 
-/* ============ COMPONENTS ============ */
+/* ============ COMPONENTS ============ *
 
-/* ============ Spinner ============ */
+/* ============ Spinner ============ *
 
 .spinner-container {
   display: flex;
@@ -342,4 +345,4 @@ img {
   100% {
     transform: rotate(360deg);
   }
-}
+} */
