--- a/desidelight/src/pages/style.module.css
+++ b/desidelight/src/pages/style.module.css
@@ -320,11 +320,11 @@
 }
 .foodimage {
   border: 2px solid black;
-  max-width: 100%;
-  max-height: 100%;
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
   border-radius: 3px;
   scale: 0.87;
-  width: 100%;
   object-fit: cover;
   height: 300px;
   transition: 0.5s all;
@@ -335,6 +335,8 @@
 }
 .foodcard {
   transition: 0.5s all ease-in-out;
+  border-radius: 10px;
+  padding: 20px;
 }
 .foodcard:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0);
@@ -422,7 +424,7 @@
   display: flex;
   align-items: flex-start;
   gap: 20px;
-  height: 400px;
+  height: 100vh;
 }
 
 .detail_image {
@@ -446,7 +448,6 @@
   /* max-height: 100vh; Ensures the content section doesn't exceed the viewport height */
   height: 100%;
   overflow-y: scroll; /* Adds vertical scrollbar if content overflows */
-
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -657,4 +658,15 @@
   padding: 10px;
   background-color: #111827;
   width: 100%;
+}
+
+/* topfood card */
+.Topfoods {
+  transition: 0.5s all ease;
+  padding: 10px;
+}
+.Topfoods:hover {
+  /*box reduce to small */
+  transform: scale(0.9);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0); */
 }
