--- a/desidelight/src/pages/style.module.css
+++ b/desidelight/src/pages/style.module.css
@@ -670,3 +670,65 @@
   transform: scale(0.9);
   /* box-shadow: 0 0 10px rgba(0, 0, 0); */
 }
+
+/* From Uiverse.io by andrew-demchenk0 */
+.Profilecard {
+  --main-color: #000;
+  --submain-color: #78858f;
+  --bg-color: #fff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  position: relative;
+  width: 300px;
+  height: 384px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background: var(--bg-color);
+}
+.Profilecard:hover {
+  /* shadow */
+  box-shadow: 0 0 10px rgba(0, 0, 0);
+}
+.profile_bg {
+  height: 192px;
+  width: 100%;
+}
+
+.profile_bg img {
+  height: 100%;
+  border-radius: 20px 20px 0 0;
+}
+
+.avtar {
+  position: absolute;
+  width: 114px;
+  height: 114px;
+  background: var(--bg-color);
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: calc(50% - 57px);
+}
+
+.avtar img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.username {
+  margin-top: 60px;
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--main-color);
+}
+
+.subtitle {
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 15px;
+  color: var(--submain-color);
+}
