--- a/desidelight/src/pages/style.module.css
+++ b/desidelight/src/pages/style.module.css
@@ -679,7 +679,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
-  width: 300px;
+  width: 400px;
   height: 384px;
   display: flex;
   flex-direction: column;
@@ -687,18 +687,12 @@
   border-radius: 20px;
   background: var(--bg-color);
 }
-.Profilecard:hover {
-  /* shadow */
-  box-shadow: 0 0 10px rgba(0, 0, 0);
-}
-.profile_bg {
-  height: 192px;
-  width: 100%;
-}
 
 .profile_bg img {
-  height: 100%;
-  border-radius: 20px 20px 0 0;
+  height: 192px;
+  width: 100%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .avtar {
@@ -731,4 +725,72 @@
   font-weight: 400;
   font-size: 15px;
   color: var(--submain-color);
+}
+/* mobile view */
+@media (max-width: 768px) {
+  .Profilecard {
+    padding-top: 100px;
+  }
+  .avtar {
+    position: absolute;
+    width: 114px;
+    height: 114px;
+    background: var(--bg-color);
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 60%;
+  }
+}
+.Footer {
+  margin-top: 200px;
+  height: 400px;
+  width: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  gap: 5vw;
+}
+.heading {
+  color: white;
+  font-weight: bolder;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.info {
+  color: #9a9b9e;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 800;
+}
+.about {
+  height: 10vh;
+  width: 10vw;
+  margin-top: 50px;
+}
+.Company,
+.Contact_Us,
+.Legal {
+  margin-top: 50px;
+}
+ol {
+  list-style: none;
+}
+@media (max-width: 800px) {
+  .Footer {
+    height: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5vw;
+  }
+  .Contact-Us,
+  .Legal {
+    margin: 1px 0px;
+  }
+  .Company {
+    margin-right: 40px;
+  }
+  .about {
+    margin-right: 58px;
+  }
 }
