--- a/desidelight/src/pages/style.module.css
+++ b/desidelight/src/pages/style.module.css
@@ -794,3 +794,16 @@ ol {
     margin-right: 58px;
   }
 }
+
+.cart {
+  margin-inline-end: 50px;
+  background-color: #f5f5f5;
+  height: 650px;
+  border-radius: 20px;
+}
+.cart h4 {
+  text-align: center;
+  padding: 10px;
+  color: #198754;
+  text-decoration: underline;
+}
